@@ -1,3 +1,7 @@
+UNRELEASED CHANGES
+  IMPROVEMENTS:
+    * New remerge command (Aaron Bentley)
+
 bzr 0.6rc1 2005-10-27
 
   IMPROVEMENTS:
